# documentation-portal

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  DEPLOY_AWS.md  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: router.py
backend/app/api/routes/: app_release.py  artisans.py  auth.py  crafts.py  dashboard.py  data_access.py  export.py  feedback.py  media.py  processes.py  products.py  questionnaire.py  review.py  search.py  settings.py  tools.py  users.py  workshops.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/data/: questionnaire_questions.json
backend/app/schemas/: access.py  app_release.py  auth.py  common.py  feedback.py  media.py  questionnaire.py  records.py  settings.py  users.py
backend/app/services/: access.py  ai.py  app_settings.py  csv_export.py  media_queue.py  pagination.py  records.py  s3.py  workshop_access.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20260613081605_init/: migration.sql
backend/prisma/migrations/20260615183213_media_questionnaire_permissions/: migration.sql
backend/prisma/migrations/20260616093000_record_time_workshop_media/: migration.sql
backend/prisma/migrations/20260616103000_media_processing_queue/: migration.sql
backend/prisma/migrations/20260616120000_questionnaire_sections/: migration.sql
backend/prisma/migrations/20260617120000_process_documentation/: migration.sql
backend/scripts/: merge_artisans.py  reconcile_interview_set_keys.py  seed_admin.py  seed_questionnaire.py
(+115 files in other folders)
