[project]
name = "field-repository-backend"
version = "0.1.0"
description = "API-first FastAPI backend for field documentation and repository workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",
    "prisma>=0.13.1",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
    "google-auth>=2.29.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["prisma*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
